--- a/style.css
+++ b/style.css
@@ -1,5 +1,26 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  .heading{text-align: center;}
+  .images{
+    display: block;
+    margin: 50px auto;
+  }
+  width: 100;
+  height: 100;
+  margin: 20;
+  .bottom{float: left;}
+
+
+  .down{float: left;}
+
+
+  .adjacent{float: left;}
+
+  .final{float: left;}
+  .bottom{background-color: red;}
+  .down{background-color: red;}
+  .adjacent{background-color: red;}
+  .final{background-color: red;}
+  #width{width: 800px,centre;}
+
+  
 }
